installed the django rest auth library and added steps of installation on the README.md

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -11,7 +11,8 @@ url = "https://pypi.python.org/simple"
 
 [packages]
 
-Django = "==2.0.2"
+django = "==2.0.2"
 djangorestframework = "*"
-Markdown = "*"
+markdown = "*"
 django-filter = "*"
+django-rest-auth = {extras = ["with_social"]}
