--- a/app/package.json
+++ b/app/package.json
@@ -78,6 +78,7 @@
     "moment": "^2.20.1",
     "moment-range": "^3.1.1",
     "moment-timezone": "^0.5.14",
+    "ngx-clipboard": "^10.0.0",
     "ngx-cookie-service": "^1.0.10",
     "plotly.js": "^1.33.1",
     "rxjs": "^5.5.6",
