--- a/app/package.json
+++ b/app/package.json
@@ -79,6 +79,7 @@
     "moment-range": "^3.1.1",
     "moment-timezone": "^0.5.14",
     "ngx-clipboard": "^10.0.0",
+    "ngx-cookie": "^3.0.1",
     "ngx-cookie-service": "^1.0.10",
     "plotly.js": "^1.33.1",
     "rxjs": "^5.5.6",
@@ -100,6 +101,7 @@
     "basscss": "^8.0.3",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "compression": "~1.6.2",
+    "compression-webpack-plugin": "^1.1.11",
     "conventional-changelog-cli": "~1.2.0",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "~3.0.0",
