--- a/app/src/shared/styles/fonts/typeface-open-sans/package.json
+++ b/app/src/shared/styles/fonts/typeface-open-sans/package.json
@@ -22,7 +22,7 @@
   "_resolved": "https://registry.npmjs.org/typeface-open-sans/-/typeface-open-sans-0.0.54.tgz",
   "_shasum": "20f5b5ea5c7f95d89dc1f8b2d2b1457680129cee",
   "_spec": "typeface-open-sans",
-  "_where": "/Users/mackenzie/Documents/Projects/Jupiter_FE/MaterialBuild",
+  "_where": "",
   "author": {
     "name": "Kyle Mathews",
     "email": "mathews.kyle@gmail.com"
