--- a/api/Pipfile
+++ b/api/Pipfile
@@ -11,7 +11,7 @@ url = "https://pypi.python.org/simple"
 
 [packages]
 
-django = "==2.1.3"
+django = ">=2.1.2"
 djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
