--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:10.1-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-  web:
+  api:
     build: ./api
     command: python /usr/src/api/manage.py runserver 0.0.0.0:8000
     volumes:
@@ -14,6 +14,18 @@ services:
       - 8000:8000
     depends_on:
       - db
+    environment:
+      - SECRET_KEY=please_change_me
+
+  app:
+    build: ./app
+    command: npm start
+    volumes:
+      - ./app/:/usr/src/app/
+    ports:
+      - 5550:5550
+    depends_on:
+      - api
     environment:
       - SECRET_KEY=please_change_me
 
