Upgraded node version.

--- a/app/package.json
+++ b/app/package.json
@@ -139,7 +139,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.9",
     "morgan": "~1.7.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.4",
     "nodemon": "~1.10.2",
     "npm-run-all": "~3.1.0",
     "postcss-loader": "^2.0.10",
@@ -164,6 +164,7 @@
     "wc-loader": "^1.1.12",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^2.11.1",
     "webpack-md5-hash": "0.0.5",
     "winston": "~2.2.0",
